# Trading-Bot-

./: .env.example  .gitignore  README.md  pyproject.toml  test.md
docker/: Dockerfile  docker-compose.yml
leekbot/: .env.example  cli.py
leekbot/api/: app.py
leekbot/backtest/: engine.py  metrics.py
leekbot/brokers/: base.py  coinbase.py  simulated.py
leekbot/config/: sample.config.yaml  styles.py  trading_styles.yaml
leekbot/core/: clock.py  dataframe.py  events.py  logging.py  risk.py  scheduler.py  utils.py
leekbot/data/: base.py  deribit.py  exchange_ws.py  oanda_ws.py  polygon.py
leekbot/exec/: order_interface.py  portfolio.py  router.py
leekbot/monitor/: __init__.py  live.py
leekbot/storage/: db.py  journal.py
leekbot/strat/: base.py  breakout_volexp.py  momentum_1m.py  options_short_strangle.py  orb_breakout.py  pairs_stat_arb.py  vix_hedge_overlay.py  vol_reversion_vix.py  vol_trend_vix.py  vwap_reversion.py
structlog/: __init__.py  stdlib.py
tests/: test_backtest_engine.py  test_monitor.py  test_order_router.py  test_risk.py  test_strategy_momentum.py  test_trading_styles.py
